# sphinx-changelog

./: .gitignore  README.md  pyproject.toml  requirements.txt
changelog/: main.py
sphinx_changelog/: __init__.py  main.py
